Name:                 drama-lang
Version:              0.1.0.0
Synopsis:             The Drama language.
Description:          Please see README.md.

License:              AllRightsReserved
Category:             Language
Build-Type:           Simple

Cabal-Version:        >= 1.10

Extra-Source-Files:   Happy.y
                    , Tokens.x

Library
  Hs-Source-Dirs:     src
  Exposed-Modules:    Happy
                    , Interpreter
                    , Tokens
                    , Types

  Other-Modules:

  Build-Depends:      array 
                    , base
                    , containers
                    , lens
                    , mtl
                    , random
                    , aeson

  Build-Tools:        alex
                    , happy

  Default-Language:   Haskell2010
  Ghc-Options:        

Test-Suite tests
  Type:               exitcode-stdio-1.0
  Hs-Source-Dirs:     tests/
  Main-Is:            Tests.hs
  Default-Language:   Haskell2010
  Build-Depends:      base
                    , drama-lang
                    , HTF
                    , mtl
                    , containers
